1.3.1:


1.3.0:
* segway: fixed improper version reporting from --version option
* segway: added semi-supervsied mode support for soft assignment. See documentation 
  for more details. 
* segway: added the ability to use multiple genomedata archives
* segway: Added support for the SEGWAY_NUM_LOCAL_JOBS environment variable,
  which controls the number of concurrent processes used when 
  SEGWAY_CLUSTER=local is set (default: 32). (thanks to Max Libbrecht)

1.2.2:
* segway: updated test benchmark for better compatability with Torque/PBS
* segway: fixed a bug when the 0-index training instance wins and fails to 
  copy the result. Segway will now store the resulting winning likelihood file 
  and likelihood tab file without the instance index as a suffix.
* segway: removed exported bash functions in for job environment submission
  after the shellshock patch (functions starting with "BASH_FUNC") since it can
  cause syntax errors when trying to import.
* segway: added useful error messages for unimplemented features of posterior
  task


1.2.1:

* segway: added new 'data' test baseline with GMTK 1.1.0
* segway: added new 'simplesubseg' test to test subsegment labels
* segway-layer: fixed bigBed conversion when blocksize==0 and added
  segway_layer_bigbed test (thanks to Jay Hesselberth)
* segway: updated documentation to clarify --clobber option in relation to
  model and structure command line options

1.2.0:

* segway: made matching against unmodified vs. modified partitions output from
  gmtk more lenient to match against
* KNOWN ISSUE: Segway will produce incorrect segmentations if the
  tracks are not specified in the order they appear in the genomedata
  archive providing the data.
* now requires a new version of GMTK (>= 1.0.0 80c1d70cea9d
  (ticket161-2)) for increased speed
* now requires Python >=2.6 (released 3.5 years ago) and <=3.0
  (although we will switch to Python 2.7 when we need it, so if you
  are upgrading, go all the way now)