@@ -1,4 +1,8 @@
 1.3.1:
+* segway: ruler now set to 10x resolution if resolution is specified and ruler
+  is not
+* segway: helpful error messages when segment table boundaries or the resolution
+  is not divisible by the ruler
 
 
 1.3.0:
@@ -9,6 +13,7 @@
 * segway: Added support for the SEGWAY_NUM_LOCAL_JOBS environment variable,
   which controls the number of concurrent processes used when 
   SEGWAY_CLUSTER=local is set (default: 32). (thanks to Max Libbrecht)
+
 
 1.2.2:
 * segway: updated test benchmark for better compatability with Torque/PBS
